# roundhouse

./: .gitignore  AGENTS.md  BETS.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  WHY.md  a  a.rb  b.rb
.cargo/: config.toml
.github/workflows/: ci.yml
bench/lobsters/: frozen-sequence.json
docs/: browser-demo-plan.md  csharp-migration-plan.md  env-gates.md  jbuilder-lowerer-plan.md  kotlin-migration-plan.md  lobsters-story-pages-plan.md  maintainability-refactor-plan-2.md  maintainability-refactor-plan.md  parameters-elimination-plan.md  relation-convergence-plan.md  relation-type-plan.md  roda-sequel-plan.md  rust-migration-plan.md  swift-migration-plan.md  with-adapter-split-plan.md
docs/data/: adapter.md  catalog.md  ruby-and-erb.md  schema-routes-seeds.md
docs/pipeline/: analyze.md  bytecode.md  emit.md  lower.md  runtime.md  verification.md
e2e/: .gitignore  README.md  action_cable.spec.js  flash.spec.js  index.spec.js  package-lock.json  package.json  playwright.config.js  tailwind.spec.js  turbo_comment.spec.js  validation.spec.js
editors/vscode/: README.md  extension.js  package.json
fixtures/real-blog/: README.md
fixtures/roda-blog/: .gitignore  Gemfile  MIT-LICENSE  README.md  app.rb  config.ru  db.rb  seeds.rb
fixtures/spinel-blog/: Gemfile  Makefile  README.md  main.rb
kotlin-reference/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
runtime/crystal/: broadcasts.cr  cable.cr  datetime.cr  db.cr  framework_test_adapter.cr  http.cr  param_value.cr  runtime.cr  server.cr  test_helper.cr  test_support.cr  view_helpers.cr
runtime/csharp/: ActiveRecordBase.cs  AdapterInterface.cs  Broadcasts.cs  Cable.cs  Db.cs  Errors.cs  RhDateTime.cs  RhRuntime.cs  Server.cs  Time.cs
runtime/elixir/: cable.ex  db.ex  http.ex  runtime.ex  server.ex  test_support.ex  view_helpers.ex
runtime/go/: cable.go  db.go  http.go  runtime.go  server.go  test_support.go  view_helpers.go
runtime/kotlin/: adapter_interface.kt  broadcasts.kt  cable.kt  datetime.kt  db.kt  server.kt  test_support.kt  time.kt
runtime/python/: cable.py  db.py  http.py  rh_datetime.py  runtime.py  server.py  test_support.py  view_helpers.py
runtime/ruby/: Rakefile  action_controller.rb  action_controller.rbs  action_dispatch.rb  action_dispatch.rbs  action_mailer.rb  action_mailer.rbs  action_view.rb  action_view.rbs  active_job.rb  active_job.rbs  active_record.rb  active_record.rbs  bcrypt_facade.rb  bcrypt_facade.rbs  db.rbs  gem_facades.rb  gem_facades.rbs  inflector.rb  inflector.rbs  inflector_ext.rb  inflector_ext.rbs  json_builder.rb  json_builder.rbs  rails.rb  rails.rbs
runtime/rust/: active_record_adapter.rs  adapter_interface.rs  broadcasts.rs  cable.rs  db.rs  errors_ext.rs  flash.rs  framework_test_adapter.rs  hash_ext.rs  http.rs  param_value.rs  rh_datetime.rs  runtime.rs  server.rs  session.rs  test_support.rs  view_helpers.rs
runtime/spinel/: active_support_duration.rb  active_support_duration.rbs  active_support_time_parsing.rb  active_support_time_parsing.rbs  base64.rb  broadcasts.rb  cable.rb  cgi_io.rb  csrf_token.rb  db.rb  db_cruby.rb  db_jruby.rb  importmap.rb  in_memory_adapter.rb  json.rb  markly_jruby.rb  sqlite.rb  sqlite_adapter.rb  type_seeds.rb
runtime/swift/: adapter_interface.swift  broadcasts.swift  cable.swift  datetime.swift  db.swift  rhstring.swift  rhthreadlocal.swift  server.swift  test_support.swift  time.swift
runtime/typescript/: action_controller_base.ts  broadcasts.ts  (+27 more)
scripts/: bench  bench-env  bench-http-ceiling  bench-lobsters  bench-report  compare  create-blog  dead-method-sweep  e2e  lobsters-matrix  lobsters-rails-replay  lobsters-replay  lobsters-report  markly-conformance  smoke
site/: 404.html  index.html  style.css
src/: adapter.rs  analyze.rs  app.rs  diagnostic.rs  dialect.rs  effect.rs  erb.rs  expr.rs  haml.rs  ide.rs  ident.rs  ingest.rs  lib.rs  lsp.rs  mcp.rs  naming.rs  profile.rs  project.rs  query.rs  rbs.rs  runtime_loader.rs  runtime_src.rs  schema.rs  session.rs  span.rs  treeshake.rs  ty.rs  vfs.rs
storage/: development.sqlite3-shm  development.sqlite3-wal
swift-reference/: .gitignore  Package.resolved  Package.swift  README.md
tests/: analyze.rs  arel_chain_guard.rs  async_coloring_emit.rs  attribute_api_lowering.rs  blank_lowering.rs  bytecode_emit.rs  bytecode_format.rs  bytecode_vm.rs  controller_helper_method.rs  controller_span_preservation.rs  create_block_lowering.rs  crystal_toolchain.rs  csharp_toolchain.rs  diagnostics_reporting.rs  duration_lowering.rs  dyn_pool_strict_locals.rs  elixir_toolchain.rs  emit_crystal.rs  emit_elixir.rs  emit_go.rs  emit_python.rs  emit_ruby.rs  emit_rust.rs  emit_typescript.rs  errors_add_lowering.rs  form_with_option_attrs.rs  form_with_record_url_lowering.rs  form_with_scoped_record_lowering.rs  framework_tests_crystal.rs  framework_tests_kotlin.rs  framework_tests_ruby.rs  framework_tests_spinel.rs  framework_tests_swift.rs  framework_tests_typescript.rs  go2_smoke.rs  go_toolchain.rs  haml_mastodon_smoke.rs  helper_param_inference.rs  inference_on_spinel_blog_runtime.rs  inference_on_spinel_blog_runtime_with_rbs.rs  (+59 more)
tools/compare/: Cargo.toml  config.example.yaml
tools/compare/src/: config.rs  diff.rs  dom.rs  fetch.rs  json_diff.rs  main.rs  report.rs
wasm/: .gitignore  Cargo.toml  build.sh  test-node.mjs
wasm/browser-spike/: .gitignore  README.md  dump-wasm-ts.mjs  gen-fixture.mjs  index.html  spike.js  transpile.mjs  validate-fixture.mjs  verify-browser.mjs  wasi-shim.mjs
wasm/ide/: README.md  bundle-src.mjs  ide.js  index.html  verify-ide.mjs  worker.mjs
wasm/lib/: .gitignore  README.md  analyzer.mjs  app-host.mjs  bundle.mjs  editor.js  engine.mjs  roundhouse_wasm.wasm  sourcemap.mjs  test-runtime.mjs  transpile.mjs  tree.js  wasm-client.mjs  worker.mjs
wasm/playground/: .gitignore  README.md  editor.js  fixture.json  index.html  playground.js  roundhouse_wasm.wasm  verify-playground.mjs
wasm/src/: lib.rs
wasm/studio/: .gitignore  README.md  index.html  studio.js  sw.js  verify-studio.mjs
(+646 files in other folders)
