[package]
name = "roundhouse"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Sam Ruby <sam@rubyred.us>"]
description = "Rails as a specification; deployment is a build flag"
license = "MIT OR Apache-2.0"
homepage = "https://rubys.github.io/roundhouse/"
repository = "https://github.com/rubys/roundhouse"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
indexmap = { version = "2", features = ["serde"] }
ruby-prism = "1.9.0"
ruby-rbs = "0.3"
