[package]
name = "roundhouse-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
roundhouse = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
