[package]
name = "roundhouse-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
roundhouse = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

# Roundhouse now uses the real `ruby-rbs` (borrowed FFI) on ALL targets. wasm
# just needs `ruby-rbs-sys` built for wasm32 — its C compiled via the WASI SDK
# and its bindgen run against the host target (#[repr(C)] is layout-portable).
# This patch points at an IN-REPO vendored copy of ruby-rbs-sys 0.3.0 carrying
# that build.rs support (upstreamed as ruby/rbs#2992, branch rust-wasm-bindings)
# plus the v4.0.2 RBS C parser it compiles (vendor/ruby-rbs-sys/vendor/rbs/).
# Vendored — rather than committing the built binary — so CI can rebuild the
# wasm from source each deploy (the demo tracks main), with no per-commit binary
# churn. The vendored crate is stable until #2992 publishes; then drop this
# patch + vendor/ and depend on the published crate. Requires WASI_SDK_PATH.
# See wasm/vendor/ruby-rbs-sys/README.md.
[patch.crates-io]
ruby-rbs-sys = { path = "vendor/ruby-rbs-sys" }
